--- a/Left.html
+++ b/Left.html
@@ -57,7 +57,7 @@ body {
         <blockquote>
           <blockquote>
             <blockquote>
-              <p><a href="Output_frame.html">หน่วยแสดงผล</a></p>
+              <p><a href="Output_frame.html" target="mainFrame">หน่วยแสดงผล</a></p>
             </blockquote>
           </blockquote>
         </blockquote>
@@ -70,7 +70,7 @@ body {
         <blockquote>
           <blockquote>
             <blockquote>
-              <p><a href="Memory.html">หน่วยความจำ</a></p>
+              <p><a href="Memory.html" target="mainFrame">หน่วยความจำ</a></p>
             </blockquote>
           </blockquote>
         </blockquote>
